<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    
           <TextView
               android:id="@+id/aTitletextView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="5dp"
               android:text="@string/AccelTitle"
               android:textSize="25sp" />      
    
           <Button
               android:id="@+id/apButton"
               style="@android:attr/buttonBarButtonStyle"
               android:layout_width="match_parent"
               android:layout_below="@+id/aTitletextView"
               android:layout_height="wrap_content"
               android:text="@string/PlotAccel"/>
           
           <Button
               android:id="@+id/astbutton"
               android:layout_width="150dp"
               android:layout_height="wrap_content"
               android:layout_below="@+id/apButton"
               android:layout_alignBaseline="@+id/aetbutton"
               android:layout_alignParentStart="true"
               android:text="@string/StartTime" />  
                          
           <Button
               android:id="@+id/aetbutton"
               android:layout_width="150dp"
               android:layout_height="wrap_content"
               android:layout_alignParentEnd="true"
               android:layout_below="@+id/apButton"
               android:text="@string/EndTime" />   
                     
           <TextView
               android:id="@+id/asttextView"
               android:layout_width="130dp"
               android:layout_height="wrap_content"
               android:layout_alignParentStart="true"
               android:layout_below="@+id/astbutton"
               android:layout_marginStart="20dp"
               android:text=""
               android:textSize="20sp" />
           
           <TextView
               android:id="@+id/aettextView"
               android:layout_width="130dp"
               android:layout_height="wrap_content"
               android:layout_alignParentEnd="true"
               android:layout_below="@+id/aetbutton"
               android:text=""
               android:textSize="20sp" />     
               
           <Button
               android:id="@+id/aButton"
               style="@android:attr/buttonBarButtonStyle"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_alignParentStart="true"
               android:layout_below="@+id/asttextView"
               android:text="@string/PlotAccelHistory" />
           
           <TextView
               android:id="@+id/dividetextView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_below="@+id/aButton"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="-20dp"
               android:text="@string/divider"
               android:textSize="30sp" />          			
           
           <TextView
               android:id="@+id/gTitletextView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_below="@+id/dividetextView"
               android:layout_marginStart="5dp"
               android:text="@string/GyroTitle"
               android:textSize="25sp" />  


           <Button
               android:id="@+id/gpButton"
               style="@android:attr/buttonBarButtonStyle"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_alignParentStart="true"
               android:layout_below="@+id/gTitletextView"
               android:text="@string/PlotGyro" />
     
           <Button
               android:id="@+id/gstbutton"
               android:layout_width="150dp"
               android:layout_height="wrap_content"
               android:layout_below="@+id/gpButton"
               android:layout_alignBaseline="@+id/getbutton"
               android:layout_alignParentStart="true"
               android:text="@string/StartTime" />  
                          
           <Button
               android:id="@+id/getbutton"
               android:layout_width="150dp"
               android:layout_height="wrap_content"
               android:layout_alignParentEnd="true"
               android:layout_below="@+id/gpButton"
               android:text="@string/EndTime" />   
                     
           <TextView
               android:id="@+id/gsttextView"
               android:layout_width="130dp"
               android:layout_height="wrap_content"
               android:layout_alignParentStart="true"
               android:layout_below="@+id/gstbutton"
               android:layout_marginStart="20dp"
               android:text=""
               android:textSize="20sp" />
           
           <TextView
               android:id="@+id/gettextView"
               android:layout_width="130dp"
               android:layout_height="wrap_content"
               android:layout_alignParentEnd="true"
               android:layout_below="@+id/getbutton"
               android:text=""
               android:textSize="20sp" />              
           
           
           <Button
               android:id="@+id/gButton"
               style="@android:attr/buttonBarButtonStyle"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_below="@+id/gsttextView"
               android:layout_alignParentStart="true"
               android:text="@string/PlotGyroHistory" />
           
	       <com.androidplot.xy.XYPlot
	            android:id="@+id/SensorPlot"
	            android:layout_width="fill_parent"
	            android:layout_height="425dp"
	            android:layout_gravity="top"
	            androidPlot.domainLabel="Time"
	            androidPlot.graphWidget.gridLinePaint.color="#000000"
	            androidPlot.graphWidget.marginLeft="15dp"
	            androidPlot.graphWidget.marginRight="10dp"
	            androidPlot.legendWidget.heightMetric.value="25dp"
	            androidPlot.legendWidget.iconSizeMetrics.heightMetric.value="15dp"
	            androidPlot.legendWidget.iconSizeMetrics.widthMetric.value="15dp"
	            androidPlot.legendWidget.positionMetrics.anchor="right_bottom"
	            androidPlot.rangeLabel="Acceleration"
	            androidPlot.title="Motion Data"
	            android:visibility="invisible" />
	       
	       <com.androidplot.xy.XYPlot
	            android:id="@+id/hPlot"
	            android:layout_width="fill_parent"
	            android:layout_height="425dp"
	            android:layout_gravity="top"
	            androidPlot.domainLabel="Time"
	            androidPlot.graphWidget.gridLinePaint.color="#000000"
	            androidPlot.graphWidget.marginLeft="15dp"
	            androidPlot.graphWidget.marginRight="10dp"
	            androidPlot.legendWidget.heightMetric.value="25dp"
	            androidPlot.legendWidget.iconSizeMetrics.heightMetric.value="15dp"
	            androidPlot.legendWidget.iconSizeMetrics.widthMetric.value="15dp"
	            androidPlot.legendWidget.positionMetrics.anchor="right_bottom"
	            androidPlot.rangeLabel="Acceleration"
	            androidPlot.title="History Data"
	            android:visibility="invisible" />

           <Button
               android:id="@+id/backbutton"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_below="@+id/gButton"
               android:layout_alignParentEnd="true"
               android:text="@string/Back"
               android:visibility="invisible" />


</RelativeLayout>
